--- a/index.css
+++ b/index.css
@@ -3,6 +3,7 @@
     padding:0;
     font-family: 'Poppins', sans-serif;
     box-sizing: border-box;
+    scroll-behavior: smooth;
 }
 
 body{
@@ -154,9 +155,35 @@ nav ul li a:hover::after{
 } 
 
 /* Services */
-#services{
+/* #services{
     padding: 30px 0;
+} */
+
+.container .heading{
+    text-align: center;
+    padding-top: 5%;
+    font-size: 40px;
+    margin-bottom: 40px;
+    font-weight: 600;
+    position: relative;
+    color: #fff;
 }
+
+
+.container .heading::after {
+    content: '';
+    background: crimson;
+    width: 100px;
+    height: 5px;
+    position: absolute;
+    bottom: -5px;
+    left: 50%;
+    transform: translateX(-50%);
+
+}
+
+
+
 
 .services-list{
     display: grid;
@@ -177,6 +204,7 @@ nav ul li a:hover::after{
 }
 .services-list div img{
     margin-bottom: 30px; 
+    /* background-size: cover; */
    /* margin-left: 30px;
     width : 60%;
     height: auto; */
@@ -230,3 +258,129 @@ nav ul li a:hover::after{
 }
 
 
+/*footer*/
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap');
+
+body {
+    /* line-height: 1.5; */
+    font-family: 'Poppins', sans-serif;
+
+}
+
+.container {
+    max-width: 1170px;
+    margin: auto;
+    padding: 70px 30px 30px;
+}
+
+.row {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+ul {
+    list-style: none;
+}
+
+.footer {
+    background-color: #000000;
+    /* padding-top: 70px; */
+}
+
+.footer-col {
+    width: 25%;
+    padding: 0 15px;
+}
+
+.footer-col h4 {
+    font-size: 18px;
+    color: #ffffff;
+    margin-bottom: 35px;
+    position: relative;
+
+
+}
+
+
+.footer-col h4::before {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: -10px;
+    background-color: #e91e63;
+    height: 2px;
+    box-sizing: border-box;
+    width: 50px;
+}
+
+.footer-col ul li:not(:last-child) {
+    margin-bottom: 15px;
+}
+
+.footer-col ul li a {
+    font-size: 16px;
+    color: #ffffff;
+    text-decoration: none;
+    /* font-weight: 300; */
+    color: #bbbbbb;
+    display: block;
+    transition: all 0.3s ease;
+}
+
+.footer-col ul li a:hover {
+    color: #ffffff;
+    padding-left: 10px;
+}
+
+.footer-col .social-links a {
+    display: inline-block;
+    height: 40px;
+    width: 40px;
+    background-color: rgba(255, 255, 255, 0.2);
+    margin: 0 10px 10px 0;
+    text-align: center;
+    line-height: 40px;
+    border-radius: 50%;
+    color: #ffffff;
+    transition: all 0.5 ease;
+
+}
+
+.footer-col .social-links a:hover {
+    color: #24262b;
+    background-color: #ffffff;
+}
+
+.footer-Bottom {
+    background-color: #111;
+    padding: 20px;
+    text-align: center;
+    /* margin-top: 20px; */
+
+}
+
+.footer-Bottom p {
+    color: #ffffff;
+}
+
+.designer {
+    opacity: 0.8;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    font-weight: 400;
+    margin: 0px 5px;
+}
+
+/*Responsive*/
+@media(max-width: 767px) {
+    .footer-col {
+        width: 50%;
+        margin-bottom: 30px;
+    }
+}
+
+@media(max-width: 574px) {
+    .footer-col {
+        width: 100%;
+    }
+}
